# JenkinsEks

./: .gitignore  Jenkinsfile  README.md
backend/: .dockerignore  dockerfile  main.py  pyproject.toml  test_main.py
jenkins/: casc.yaml  dockerfile  plugins.txt  seedjob.groovy
k8s/: deployment.yaml  deployweather.yaml  private.yaml  public-lb.yaml  serviceAccount.yaml  weatherlb.yaml
terraform/: main.tf
terraform/eks/: ecr.tf  eks.tf  igw.tf  main.tf  nat.tf  nodes.tf  oidc-test.tf  oidc.tf  routes.tf  state.tf  subnets.tf
terraform/jenkinsServer/: locals.tf  main.tf  providers.tf
terraform/jenkinsServer/modules/server/: variables.tf
terraform/jenkinsServer/modules/vpc/: main.tf
terraform/jenkinsServer/scripts/: script.sh
terraform/modules/server/: main.tf
